--- a/explorar.html
+++ b/explorar.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#">Explorar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
         </ul>
       </div>
